--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,9 @@
-log4j.rootLogger=ERROR, file
-
+log4j.rootLogger=ALL, file
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 
 #log4j.appender.file.File=E:\\temp\\info.log
-log4j.appender.file.File=target/logs/error.log
+log4j.appender.file.File=target/logs/Tennis.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
